--- a/Payments.Backend.Challenge.Application/Payments.Backend.Challenge.Application.csproj
+++ b/Payments.Backend.Challenge.Application/Payments.Backend.Challenge.Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Payments.Backend.Challenge.Domain\Payments.Backend.Challenge.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Interfaces\" />
+    </ItemGroup>
+
 </Project>
