--- a/Payments.Backend.Challenge.API/Payments.Backend.Challenge.API.csproj
+++ b/Payments.Backend.Challenge.API/Payments.Backend.Challenge.API.csproj
@@ -8,6 +8,11 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="10.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Payments.Backend.Challenge.Application\Payments.Backend.Challenge.Application.csproj" />
     </ItemGroup>
 
 </Project>
