--- a/Payments.Backend.Challenge.API/Payments.Backend.Challenge.API.csproj
+++ b/Payments.Backend.Challenge.API/Payments.Backend.Challenge.API.csproj
@@ -4,15 +4,24 @@
         <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
+        <PackageReference Include="Microsoft.EntityFramework.SqlServer" Version="6.5.1" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="10.0.2" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Payments.Backend.Challenge.Application\Payments.Backend.Challenge.Application.csproj" />
+      <ProjectReference Include="..\Payments.Backend.Challenge.Infrastructure\Payments.Backend.Challenge.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="..\.dockerignore">
+        <Link>.dockerignore</Link>
+      </Content>
     </ItemGroup>
 
 </Project>
