--- a/Payments.Backend.Challenge.API/appsettings.json
+++ b/Payments.Backend.Challenge.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=db;Database=PaymentBackendChallenge;User Id=sa;Password=${SQL_SERVER_MANAGEMENT_DB_PASSWORD};TrustServerCertificate=True;"
+  }
 }
