--- a/Payments.Backend.Challenge.API/Payments.Backend.Challenge.API.csproj
+++ b/Payments.Backend.Challenge.API/Payments.Backend.Challenge.API.csproj
@@ -9,7 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0"/>
-        <PackageReference Include="Microsoft.EntityFramework.SqlServer" Version="6.5.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="10.0.2" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="10.0.2" />
     </ItemGroup>
 
