--- a/Payments.Backend.Challenge.API/appsettings.json
+++ b/Payments.Backend.Challenge.API/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=db;Database=PaymentBackendChallenge;User Id=sa;Password=${SQL_SERVER_MANAGEMENT_DB_PASSWORD};TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost,1433;Database=PaymentBackendChallenge;User Id=sa;Password=${SQL_SERVER_MANAGEMENT_DB_PASSWORD};TrustServerCertificate=True;"
   }
 }
